# Cash_Reconciliation

./: .gitignore  README.md  RecX_Technical_Specification.docx  app.py  cash_reconciliation.py  generate_spec_doc.py  pyproject.toml  sync_inputs.ps1  sync_inputs.py
recx-frontend/: package-lock.json  package.json
recx-frontend/src/: App.tsx  RecXDashboard.tsx
src/cash_rec/: cli.py  config.py  data_clean.py  data_input.py  data_output.py  exceptions.py  file_discovery.py  materiality.py  pipeline.py  reconciliation.py  utils.py
src/cash_rec/config/: config.local.yaml.example  config.local.yaml.template  defaults.yaml
tests/: test_loaders.py
