[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cash-rec"
version = "0.2.0"
description = "Multi-custody cash reconciliation toolkit"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "openpyxl>=3.1",
  "pyyaml>=6.0",
]

[project.scripts]
cash-rec = "cash_rec.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
